2000-05-01  Harlan Stenn  <stenn@whimsy.udel.edu>

	* configure.in: 4.0.99i4

	* include/ntp.h:
	* include/ntp_crypto.h:
	* include/ntpd.h:
	* ntpd/ntp_crypto.c: 
	* ntpd/ntp_proto.c: 
	* ntpd/ntpd.c: 
	* util/ntp_genkeys.c: 
	Dave Mills closed some potential vulnerabilities in the key protocol.

2000-04-28  Harlan Stenn  <stenn@whimsy.udel.edu>

	* configure.in: 4.0.99i3

	* ntpd/ntp_proto.c: Just check tstamp, forget about sndauto.seq
	* ntpd/ntp_crypto.c (crypto_recv): Lose inappropriate ntohl()
	conversion on tstamp.
	AUTOKEY if tstamp>0, not !=
	Stash tstamp before we check pcookie.key (several places)
	* ntpd/ntp_control.c (ctl_putpeer): In CP_INITSEQ, check
	recauto.key, not keylist.
	From: Dave Mills

2000-04-27  Harlan Stenn  <stenn@whimsy.udel.edu>

	* configure.in: 4.0.99i2

	* ntpq/ntpq.c: PUBKEY stuff
	* ntpd/ntp_proto.c (clock_select): nreach, and better survivor pick.
	* ntpd/ntp_peer.c (newpeer): Better nextdate choice.
	* ntpd/ntp_control.c (ctl_putsys): Buglet in CS_HOSTNAM code.
	From Dave Mills.

2000-04-24  Harlan Stenn  <stenn@whimsy.udel.edu>

	* build (IAM): Show hostname if we trip a buildkey check.

2000-04-23  Harlan Stenn  <stenn@whimsy.udel.edu>

	* build: deal with optional 1st argument (SIG), which must match
	the contents of .buildkey

	* flock-build: Generalize, implement SIG and .buildkey, and drive
	list from LIST, which the user can override.

2000-04-21  Harlan Stenn  <stenn@whimsy.udel.edu>

	* configure.in: 4.0.99i1
	Dave updated some docs, implemented the kpoll variable, and
	wiggled a host/network byte order thing in the crypto key code.

2000-04-16  Harlan Stenn  <stenn@whimsy.udel.edu>

	* ntpd/refclock_wwvb.c (wwvb_receive): Grab any character (instead
	of just a space) before the DSTchar.
	From: Dave Mills

2000-04-11  Harlan Stenn  <stenn@whimsy.udel.edu>

	* configure.in: 4.0.99i

	Dave made some documentation updates.

2000-04-08  Harlan Stenn  <stenn@whimsy.udel.edu>
