@@ -1,3 +1,7 @@
+2000-05-03  Harlan Stenn  <stenn@whimsy.udel.edu>
+
+	* ntpdate/ntpdate.c: Protect sys/ioctl.h
+
 2000-05-01  Harlan Stenn  <stenn@whimsy.udel.edu>
 
 	* configure.in: 4.0.99i4
